force-app/main/default/objects/Contact/fields/Account_Name_Copy__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Copy__c</fullName>
    <description>This field carries the name of the company/account the contact was originally associated with.</description>
    <label>Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>