force-app/main/default/objects/Contact/fields/AccountAddressId__c.field-meta.xml
<CustomField>
    <fullName>AccountAddressId__c</fullName>
    <label>Account Address Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>