force-app/main/default/objects/Contact/fields/ApexJobName__c.field-meta.xml
<CustomField>
    <fullName>ApexJobName__c</fullName>
    <label>ApexJobName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>