force-app/main/default/objects/Contact/fields/AxisId__c.field-meta.xml
<CustomField>
    <fullName>AxisId__c</fullName>
    <label>Axis Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>