force-app/main/default/objects/Contact/fields/BillToAccount__c.field-meta.xml
<CustomField>
    <fullName>BillToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BillTo Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Addresses</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>