force-app/main/default/objects/Contact/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <externalId>true</externalId>
    <label>Contact Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>