force-app/main/default/objects/Contact/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Engagement Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>