force-app/main/default/objects/Contact/fields/CustomerMaxHoursPerWeek__c.field-meta.xml
<CustomField>
    <fullName>CustomerMaxHoursPerWeek__c</fullName>
    <label>Customer Max Hours Per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>