force-app/main/default/objects/Contact/fields/DivisionNumber__c.field-meta.xml
<CustomField>
    <fullName>DivisionNumber__c</fullName>
    <label>Division Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>