force-app/main/default/objects/Contact/fields/HomeGeoLocation__c.field-meta.xml
<CustomField>
    <fullName>HomeGeoLocation__c</fullName>
    <label>HomeGeoLocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>