force-app/main/default/objects/Contact/fields/Is3PLReq__c.field-meta.xml
<CustomField>
    <fullName>Is3PLReq__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is 3PL Req</label>
    <type>Checkbox</type>
</CustomField>