force-app/main/default/objects/Contact/fields/ManagerId__c.field-meta.xml
<CustomField>
    <fullName>ManagerId__c</fullName>
    <label>Manager Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>