force-app/main/default/objects/Contact/fields/MaxCheckInTime__c.field-meta.xml
<CustomField>
    <fullName>MaxCheckInTime__c</fullName>
    <label>Max Check In Time</label>
    <type>DateTime</type>
</CustomField>