force-app/main/default/objects/Contact/fields/MaxCheckOutTime__c.field-meta.xml
<CustomField>
    <fullName>MaxCheckOutTime__c</fullName>
    <label>Max Check Out Time</label>
    <type>DateTime</type>
</CustomField>