force-app/main/default/objects/Contact/fields/OneHubThirdPartyAgencyContactId__c.field-meta.xml
<CustomField>
    <fullName>OneHubThirdPartyAgencyContactId__c</fullName>
    <externalId>true</externalId>
    <label>OneHub Third Party Agency ContactId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>