force-app/main/default/objects/Contact/fields/Pin__c.field-meta.xml
<CustomField>
    <fullName>Pin__c</fullName>
    <label>Pin</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>