force-app/main/default/objects/Contact/fields/PinHash__c.field-meta.xml
<CustomField>
    <fullName>PinHash__c</fullName>
    <label>Pin Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>